src/objects/Special_Client__c.object
<CustomObject>
    <fields>
        <fullName>Cibi__c</fullName>
        <label>Food</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Tipologia__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Sushi</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Gourmet</fullName>
                </value>
                <value>
                    <fullName>Pizza</fullName>
                </value>
                <value>
                    <fullName>Seafood</fullName>
                </value>
                <value>
                    <fullName>Vegetables</fullName>
                </value>
                <value>
                    <fullName>Chocolate</fullName>
                </value>
                <value>
                    <fullName>Italian wines</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Liquors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Special_Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deceduto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceduto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Account_Owner__c</fullName>
        <label>Email Account Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Client_temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Client temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipologia__c</fullName>
        <label>Service Note List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cibi desiderati</fullName>
                    <label>Preferred food</label>
                </value>
                <value>
                    <fullName>Cibi indesiderati</fullName>
                    <label>Unwelcome food</label>
                </value>
                <value>
                    <fullName>Criticità</fullName>
                    <isActive>false</isActive>
                    <label>Criticità</label>
                </value>
                <value>
                    <fullName>Nota</fullName>
                    <isActive>false</isActive>
                    <label>Nota</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Nota di servizio</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Numero Nota di servizio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note di servizio</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>